--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -11,7 +11,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # Add the executable
-add_executable(ParticleInSpace space-particle.cpp)
+add_executable(ParticleInSpace space-particle-with-3D-effect.cpp)
 
 # SFML path setup
 set(SFML_DIR "C:/SFML-2.6.2/lib/cmake/SFML")
